--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,16 +1,25 @@
 /* Variables */
 :root {
-  --white: #fff;
-  --grey-100: #fcfcfe;
-  --grey-200: #f9fafd;
-  --grey-300: #f5f7fb;
-  --grey-400: #f2f5fa;
-  --grey-500: #eff2f9;
-  --grey-600: #bfc2c7;
-  --grey-700: #8f9195;
-  --grey-800: #606164;
-  --grey-900: #303032;
-  --primary: #3c5284;
+  /* new-colors - generated from colormind.io */
+
+  --light-shade: #eacd85;
+  --light-accent: #70b0a5;
+  --main-color: #79a14d;
+  --dark-accent: #977b38;
+  --dark-shade: rgb(33, 82, 60);
+
+  /* create a shades of grey */
+  --grey-100: #f9fafb;
+  --grey-200: #f2f5fa;
+  --grey-300: #eff2f9;
+  --grey-400: #c4c6c9;
+  --grey-500: #939497;
+  --grey-600: #626364;
+  --grey-700: #313132;
+  --grey-800: #1f1f1f;
+  --grey-900: #0f0f0f;
+
+  /* create a shades of blue */
   --primary-100: #d8dce6;
   --primary-200: #b1bace;
   --primary-300: #8a97b5;
@@ -20,8 +29,51 @@
   --primary-700: #24314f;
   --primary-800: #182135;
   --primary-900: #0c101a;
+
+  /* create a shades of sapphire */
+  --sapphire-100: #cee0e3;
+  --sapphire-200: #9cc1c8;
+  --sapphire-300: #6ba1ac;
+  --sapphire-400: #398291;
+  --sapphire-500: #086375;
+  --sapphire-600: #064f5e;
+  --sapphire-700: #053b46;
+  --sapphire-800: #03282f;
+  --sapphire-900: #021417;
+  --red: #bbcbe5;
+  /* create a shades of yellow */
+  --yellow-100: #fff4d9;
+  --yellow-200: #feeab3;
+  --yellow-300: #fedf8c;
+  --yellow-400: #fdd566;
+  --yellow-500: #fdca40;
+
+  /* create a shades of red */
+  --red-100: #fde8e8;
+  --red-200: #fbc1c1;
+  --red-300: #f99a9a;
+  --red-400: #f77373;
+  --red-500: #f54c4c;
+  --red-600: #d43d3d;
+  --red-700: #b32e2e;
+  --red-800: #911f1f;
+  --red-900: #700f0f;
+
+  /* create a shades of green */
+  --green-100: #e8fde8;
+  --green-200: #c1fbc1;
+  --green-300: #9af99a;
+  --green-400: #73f773;
+  --green-500: #4cf54c;
+  --green-600: #3ecf3e;
+  --green-700: #2da92d;
+  --green-800: #1c841c;
+  --green-900: #0d600d;
+
+  --white: #fff;
+  --primary: #3c5284;
+
   --secondary: rgb(48, 65, 105);
-  --terciary: rgb(60, 82, 132);
   --paper-background: rgb(244, 244, 244);
   --background-input: #eff2f9;
   --color-placeholder: rgb(159, 166, 187);
@@ -37,8 +89,9 @@
 @import url("./layouts.css");
 @import url("./buttons.css");
 @import url("./print.css");
-@import url("./drawer.css");
 @import url("./snippets.css");
+@import url("./collapse.css");
+@import url("./navigation.css");
 
 /* Global styles */
 
@@ -61,9 +114,42 @@ ul {
   margin: 0;
 }
 
-.App {
-  background: #e8eaf0;
+.hidden {
+  display: none;
 }
+
+.App {
+  background: var(--grey-300);
+  height: 100vh;
+  width: 100vw;
+  overflow: auto;
+}
+
+.section-list {
+  padding: 1rem 0.5em;
+  display: grid;
+  gap: 0.5rem;
+}
+
+.section {
+  background-color: var(--white);
+  border-radius: 0.5rem;
+  box-shadow: 0 0 1px var(--shadow);
+  max-width: clamp(480px, 100%, 768px);
+}
+
+.section-header {
+  padding: 0.75rem 1rem;
+  border-bottom: 1px solid var(--grey-300);
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.section-content {
+  padding: 1rem;
+}
+
 /* Progress */
 
 .progress {
@@ -85,18 +171,20 @@ ul {
 
 .title {
   font-weight: 600;
-  color: #334;
+  /* color: #334; */
+  color: var(--grey-700);
   text-transform: uppercase;
   text-align: center;
   border-bottom: 1px solid var(--shadow);
-  padding-bottom: 0.5rem;
 }
 
 .heading-2 {
-  font-size: x-large;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
+    "Helvetica Neue", sans-serif;
   font-weight: 500;
-  line-height: 1.2;
-  letter-spacing: -0.04em;
+  font-size: 1.125rem;
+  letter-spacing: 0.25px;
+  line-height: 22px;
 }
 
 .label {
