--- a/src/styles/snippets.css
+++ b/src/styles/snippets.css
@@ -27,8 +27,8 @@
 }
 
 .grid-column {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(50%, 1fr));
+  /* display: grid; */
+  grid-template-columns: repeat(auto-fit, minmax(1px, 1fr));
 }
 
 .grid-row {
