--- a/src/styles/forms.css
+++ b/src/styles/forms.css
@@ -9,10 +9,10 @@
   width: clamp(100px, fit-content, 100%);
   height: 100%;
   line-height: normal;
-  background-color: var(--grey-500, --white);
+  background-color: var(--grey-300, --white);
   outline: currentcolor none medium;
   border: 0px none;
-  color: rgb(30, 37, 50);
+  color: var(--grey-900);
   transition: all 0.1s ease 0s;
 }
 
@@ -25,7 +25,7 @@
 }
 
 .range {
-  accent-color: var(--primary);
+  accent-color: var(--primary-600);
 }
 
 .range::-webkit-slider-thumb {
@@ -144,7 +144,7 @@ textarea::placeholder {
   right: 0px;
   width: 100%;
   height: 2px;
-  background-color: var(--primary-300);
+  background-color: var(--yellow-500);
   border-radius: 0px 0px 2px 2px;
   pointer-events: none;
   opacity: 0;
