--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -181,6 +181,7 @@ ul {
 .heading-2 {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
     "Helvetica Neue", sans-serif;
+  text-transform: uppercase;
   font-weight: 500;
   font-size: 1.125rem;
   letter-spacing: 0.25px;
@@ -223,7 +224,13 @@ ul {
 }
 .icon {
   width: 20px;
-  margin-right: 0.25rem;
+  color: var(--primary);
   height: 20px;
-  font-weight: 800;
+  /* font-weight: 800; */
+}
+
+.action-delete {
+  padding: 0.5rem;
+  display: flex;
+  justify-content: flex-end;
 }
