--- a/src/styles/forms.css
+++ b/src/styles/forms.css
@@ -144,7 +144,7 @@ textarea::placeholder {
   right: 0px;
   width: 100%;
   height: 2px;
-  background-color: var(--yellow-500);
+  background-color: var(--primary-500);
   border-radius: 0px 0px 2px 2px;
   pointer-events: none;
   opacity: 0;
