--- a/src/styles/forms.css
+++ b/src/styles/forms.css
@@ -12,6 +12,7 @@
   background-color: var(--grey-300, --white);
   outline: currentcolor none medium;
   border: 0px none;
+  resize: vertical;
   color: var(--grey-900);
   transition: all 0.1s ease 0s;
 }
@@ -25,7 +26,7 @@
 }
 
 .range {
-  accent-color: var(--primary-600);
+  accent-color: var(--primary);
 }
 
 .range::-webkit-slider-thumb {
@@ -143,12 +144,12 @@ textarea::placeholder {
   left: 0px;
   right: 0px;
   width: 100%;
-  height: 2px;
-  background-color: var(--primary-500);
-  border-radius: 0px 0px 2px 2px;
+
+  height: clamp(2px, 2px, 2px);
+  background-color: var(--primary);
   pointer-events: none;
   opacity: 0;
-  transform: scaleX(0.5);
+  /* transform: scaleX(0.5); */
   transition: all 0.2s ease 0s;
 }
 
