--- a/src/styles/navigation.css
+++ b/src/styles/navigation.css
@@ -4,9 +4,10 @@
   z-index: 1;
   height: auto;
   background-color: var(--white);
-  border-bottom: 1px solid var(--primary-100);
+  border-bottom: 1px solid var(--shadow);
   display: flex;
-  padding: 0 1rem 0.5rem 1rem;
+  flex-direction: row;
+  padding: 0rem 1rem;
   line-height: 0;
   align-items: center;
   justify-content: space-between;
