--- a/src/styles/snippets.css
+++ b/src/styles/snippets.css
@@ -8,6 +8,25 @@
   display: block;
 }
 
+.grid-auto {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  grid-gap: 0.5rem;
+}
+
+.flex-auto {
+  display: flex;
+  flex: 1 1 0%;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 0.5rem;
+  justify-content: space-between;
+}
+
+.gap {
+  gap: 0.5rem;
+}
+
 .flex {
   display: flex;
 }
@@ -27,8 +46,7 @@
 }
 
 .grid-column {
-  /* display: grid; */
-  grid-template-columns: repeat(auto-fit, minmax(1px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
 }
 
 .grid-row {
