--- a/src/styles/print.css
+++ b/src/styles/print.css
@@ -13,14 +13,18 @@
   /* adjust page size to A4 ISO format */
 
   @page {
-    size: A4;
+    size: A4 !important;
     margin: 0;
+    padding: 0;
     -webkit-print-color-adjust: exact;
     color-adjust: exact;
   }
 
-  .paper {
+  .page {
+    margin: 0;
+    padding: 0;
     width: 210mm;
     height: 297mm;
+    page-break-after: always;
   }
 }
