--- a/src/styles/snippets.css
+++ b/src/styles/snippets.css
@@ -41,6 +41,11 @@
   flex-direction: row;
 }
 
+.space-between {
+  justify-content: space-between;
+  align-items: center;
+}
+
 .grid {
   display: grid;
 }
