--- a/src/styles/navigation.css
+++ b/src/styles/navigation.css
@@ -3,7 +3,8 @@
   top: 0;
   z-index: 1;
   height: auto;
-  background-color: var(--white);
+  background-color: var(--primary);
+  color: var(--white);
   border-bottom: 1px solid var(--shadow);
   display: flex;
   flex-direction: row;
