--- a/src/styles/navigation.css
+++ b/src/styles/navigation.css
@@ -1,11 +1,11 @@
-.navbar {
+.app-nav {
   position: sticky;
   top: 0;
   z-index: 1;
   height: auto;
   background-color: var(--primary);
   color: var(--white);
-  border-bottom: 1px solid var(--shadow);
+  box-shadow: 0px 0px 8px 2px var(--shadow);
   display: flex;
   flex-direction: row;
   padding: 0rem 1rem;
