--- a/src/styles/collapse.css
+++ b/src/styles/collapse.css
@@ -1,3 +1,10 @@
+/* if there are more than 2 collapse-container add a separator */
+.collapse-container:not(:last-child) {
+  margin-bottom: 0.5rem;
+  border-radius: 0;
+  border-bottom: 1px solid var(--grey-300);
+}
+
 .collapse-container {
   display: flex;
   flex-direction: column;
@@ -7,15 +14,24 @@
   user-select: none;
 }
 
+.collapse-container:hover > .collapse-button {
+  background-color: #e6e6e6;
+}
+
+.collapse-container:hover > .collapse-title {
+  color: var(--primary);
+}
+
 .collapse-title {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  align-self: start;
   width: 100%;
-  /* padding: 0.5rem; */
+  padding: 0.25rem;
   font-weight: 600;
   font-size: large;
-  color: var(--grey-700);
+  color: var(--primary);
 }
 
 .collapse-content {
