--- a/src/styles/layouts.css
+++ b/src/styles/layouts.css
@@ -1,15 +1,3 @@
-.editor {
-  /* overflow: auto; */
-  height: clamp(1px, fit-content, 100vh);
-}
-
-.scroll-decoration {
-  /* background-image: linear-gradient(to top, rgba(60, 82, 132, 0.3), rgba(245, 245, 245, 0)); */
-  position: -webkit-sticky;
-  position: sticky;
-  bottom: 0;
-  pointer-events: none;
-  display: flex;
-  width: 100%;
-  height: 5rem;
+.aside {
+  background-color: slate-blue;
 }
