--- a/src/styles/navigation.css
+++ b/src/styles/navigation.css
@@ -1,15 +1,55 @@
 .app-nav {
-  position: sticky;
+  /* position: relative; */
   top: 0;
   z-index: 1;
-  height: auto;
+  overflow: hidden;
+  height: 100%;
+  transition: cubic-bezier(0.4, 0, 0.2, 1) 1s;
   background-color: var(--primary);
   color: var(--white);
   box-shadow: 0px 0px 8px 2px var(--shadow);
   display: flex;
   flex-direction: row;
-  padding: 0rem 1rem;
+  flex-wrap: wrap;
+  padding: 1.5em 1rem;
+  margin: 0;
+  min-width: 384px;
+  width: 100%;
   line-height: 0;
   align-items: center;
   justify-content: space-between;
+}
+
+.app-nav.shrink {
+  padding: 0rem 1rem;
+}
+
+.github-icon {
+  width: 40px;
+  height: 40px;
+  color: var(--primary);
+  fill: white;
+}
+
+.github-icon.shrink {
+  width: 24px;
+  height: 24px;
+  margin: 0.5rem;
+  color: var(--primary);
+  fill: white;
+}
+
+.app-title.shrink {
+  font-size: 1.1rem;
+  font-weight: 600;
+  color: var(--white);
+  text-transform: uppercase;
+}
+
+.app-title {
+  font-size: 1.9rem;
+  font-weight: 600;
+  color: var(--white);
+  text-transform: uppercase;
+  text-align: center;
 }
