--- a/src/styles/print.css
+++ b/src/styles/print.css
@@ -9,22 +9,39 @@
     visibility: visible;
   }
 
-  /* disable headers and footers */
   /* adjust page size to A4 ISO format */
 
   @page {
     size: A4 !important;
-    margin: 0;
-    padding: 0;
     -webkit-print-color-adjust: exact;
     color-adjust: exact;
   }
 
-  .page {
+  /* disable headers and footers */
+  /* adjust page margins */
+  @page {
     margin: 0;
     padding: 0;
+  }
+
+  body,
+  html {
+    background-color: none;
     width: 210mm;
     height: 297mm;
-    page-break-after: always;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    box-sizing: border-box;
+  }
+
+  .page {
+    /* width: 210mm; */
+    /* height: 297mm; */
+    height: 100%;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    /* page-break-after: always; */
   }
 }
