--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -7,7 +7,7 @@
 @import url("./snippets.css");
 @import url("./collapse.css");
 @import url("./navigation.css");
-
+@import url("./card.css");
 @import url("./templates/template-default.css");
 /* Global styles */
 
@@ -22,7 +22,6 @@
 
 body {
   overflow: hidden;
-  /* background: var(--grey-300); */
 }
 
 ul {
@@ -36,30 +35,33 @@ ul {
 }
 
 .app {
-  height: clamp(100vh, 100vh, 100vh);
-  width: clamp(384px, 100vw, 1200px);
-  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
 }
 
 .scrollable-content {
-  padding: 0.15rem;
-  box-shadow: 0 4px 5px rgba(200, 200, 200, 0.9);
-  /* background: white; */
-  background: var(--grey-300);
-  border-radius: 0.25rem;
-  margin-top: 0.5rem;
-  overflow: auto;
-  height: 100%;
-}
-
-.scrollable-content.scrolled {
-  /* padding-top: 0.5rem; */
-}
-
-.app-layout {
+  height: clamp(100vh, 100vh, 100vh);
+  width: clamp(384px, 100vw, 1200px);
+  margin: 0 auto;
+  padding: 0 1rem;
+  padding-top: 2vh;
+  background: var(--paper-background);
+  overflow-y: auto;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-  align-items: start;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  align-items: stretch;
+}
+
+.scroll-decoration {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  background: linear-gradient(to bottom, rgba(255, 255, 255, 0), rgba(255, 255, 255, 1));
+  width: 1rem;
+  height: 100%;
+  pointer-events: none;
+  z-index: 1;
 }
 
 .section-list {
@@ -71,13 +73,14 @@ ul {
 .section {
   background-color: var(--white);
   border-radius: 0.5rem;
+  height: fit-content;
   box-shadow: 0 0 1px var(--shadow);
-  max-width: clamp(480px, 100%, 768px);
+  /* width: clamp(480px, 100%, 768px); */
 }
 
 .section-header {
   padding: 0.75rem 1rem;
-  border-bottom: 1px solid var(--grey-300);
+  border-bottom: 1px solid var(--input-background);
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -165,10 +168,4 @@ ul {
   color: var(--primary);
   fill: white;
   /* font-weight: 800; */
-}
-
-.action-delete {
-  padding: 0.5rem;
-  display: flex;
-  justify-content: flex-end;
 }
