--- a/src/styles/forms.css
+++ b/src/styles/forms.css
@@ -9,7 +9,7 @@
   width: clamp(100px, fit-content, 100%);
   height: 100%;
   line-height: normal;
-  background-color: var(--grey-300, --white);
+  background-color: var(--input-background, --white);
   outline: currentcolor none medium;
   border: 0px none;
   resize: vertical;
@@ -36,6 +36,27 @@
   border-radius: 50%;
   background-color: var(--primary);
   cursor: pointer;
+  transition: all 0.2s ease-in-out;
+}
+
+.range-ruler {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  height: clamp(1rem, 1rem, 1rem);
+}
+
+.range-ruler .tick {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0.05rem;
+  width: clamp(1px, 1px, 1px);
+  height: 100%;
+  background-color: var(--muted);
   transition: all 0.2s ease-in-out;
 }
 
@@ -144,12 +165,11 @@ textarea::placeholder {
   left: 0px;
   right: 0px;
   width: 100%;
-
   height: clamp(2px, 2px, 2px);
   background-color: var(--primary);
   pointer-events: none;
   opacity: 0;
-  /* transform: scaleX(0.5); */
+  transform: scaleX(0.5);
   transition: all 0.2s ease 0s;
 }
 
