--- a/src/styles/layouts.css
+++ b/src/styles/layouts.css
@@ -1,3 +1,21 @@
 .aside {
-  background-color: slate-blue;
+  position: relative;
+  top: 0;
+}
+
+.aside-nav {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  overflow: hidden;
+  width: fit-content;
+  transition: cubic-bezier(0.4, 0, 0.2, 1) 1s;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  padding: 1.5em 1rem;
+  height: auto;
+  width: 100%;
+  line-height: 0;
 }
