--- a/src/styles/navigation.css
+++ b/src/styles/navigation.css
@@ -13,6 +13,7 @@
   flex-wrap: wrap;
   padding: 1.5em 1rem;
   margin: 0;
+  height: auto;
   min-width: 384px;
   width: 100%;
   line-height: 0;
@@ -25,6 +26,7 @@
 }
 
 .github-icon {
+  transition: all cubic-bezier(0.4, 0, 0.2, 1) 1s;
   width: 40px;
   height: 40px;
   color: var(--primary);
