--- a/src/styles/templates/template-default.css
+++ b/src/styles/templates/template-default.css
@@ -33,8 +33,11 @@
 .page {
   /* width: fit-content; */
   /* height: 297mm; */
-  width: 100%;
-  height: 100%;
+  width: 24rem;
+  height: 28rem;
+  overflow: auto;
+  /* width: 100%; */
+  /* height: 100%; */
   /* min-height: 297mm; */
   /* padding: 0; */
   /* margin: 0 auto; */
@@ -43,7 +46,7 @@
   /* border: 1px #d3d3d3 solid; */
   position: relative;
   display: flex;
-  /* flex-direction: column; */
+  flex-direction: column;
   /* justify-content: center; */
 }
 .template-select-item {
