--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -9,6 +9,7 @@
 @import url("./navigation.css");
 @import url("./card.css");
 @import url("./templates/template-default.css");
+@import url("skillRange.css");
 /* Global styles */
 
 *,
