--- a/src/styles/forms.css
+++ b/src/styles/forms.css
@@ -25,7 +25,49 @@
   height: 100%;
 }
 
-.range {
+/* remove all styles from input range */
+input[type="range"] {
+  -webkit-appearance: none;
+  width: 100%;
+  height: 2.5rem;
+  background: linear-gradient(
+    /* from lightred to green */ to right,
+    rgba(255, 0, 0, 0.5) 0%,
+    rgba(255, 0, 0, 0.5) 25%,
+    rgba(255, 255, 0, 0.5) 25%,
+    rgba(255, 255, 0, 0.5) 50%,
+    rgba(0, 255, 0, 0.5) 50%,
+    rgba(0, 255, 0, 0.5) 75%,
+    rgba(0, 0, 255, 0.5) 75%,
+    rgba(0, 0, 255, 0.5) 100%
+  );
+  border-radius: 0.35rem;
+}
+
+/* remove all styles from input range */
+input[type="range"]::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  width: 12px;
+  height: 12px;
+  background: var(--light-accent);
+  border-color: transparent;
+}
+
+input[type="range"]::-moz-range-thumb {
+  width: 12px;
+  height: 12px;
+  background: var(--light-accent);
+  border-color: transparent;
+}
+
+input[type="range"]::-ms-thumb {
+  width: 12px;
+  height: 12px;
+  background: var(--light-accent);
+  border-color: transparent;
+}
+
+/* .range {
   accent-color: var(--primary);
 }
 
@@ -37,28 +79,7 @@
   background-color: var(--primary);
   cursor: pointer;
   transition: all 0.2s ease-in-out;
-}
-
-.range-ruler {
-  position: relative;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  width: 100%;
-  height: clamp(1rem, 1rem, 1rem);
-}
-
-.range-ruler .tick {
-  position: relative;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 0.05rem;
-  width: clamp(1px, 1px, 1px);
-  height: 100%;
-  background-color: var(--muted);
-  transition: all 0.2s ease-in-out;
-}
+} */
 
 input:disabled,
 textarea:disabled {
