--- a/src/styles/skillRange.css
+++ b/src/styles/skillRange.css
@@ -2,7 +2,7 @@
   display: flex;
   position: relative;
   overflow: hidden;
-  height: 4rem;
+  height: 3rem;
   min-width: 16rem;
   border-radius: 0.25rem;
   background-color: var(--background-input);
@@ -19,29 +19,43 @@
 }
 
 .level-1 {
-  background-color: #eacd85;
+  background-color: #eab473;
 }
 
 .level-2 {
-  background-color: #70b0a5;
+  background-color: #eae073;
 }
 
 .level-3 {
-  background-color: #79a14d;
+  background-color: #81ea73;
 }
 
 .level-4 {
-  background-color: #977b38;
-}
-
-/* level even */
-.level- {
-  border-left: 1px solid var(--shadow);
+  background-color: #73b4ea;
 }
 
 .level.selected {
-  height: 100%;
-  background-color: var(--primary);
+  height: 4.3rem;
   cursor: pointer;
   transition: transform 0.2s ease 0s;
+}
+
+.thumb-1 {
+  background-color: hsl(33, 74%, 55%);
+  box-shadow: 0px 0px 0px 0.25rem hsl(33, 74%, 55%);
+}
+
+.thumb-2 {
+  background-color: hsl(55, 74%, 50%);
+  box-shadow: 0px 0px 0px 0.25rem hsl(55, 74%, 50%);
+}
+
+.thumb-3 {
+  background-color: hsl(113, 74%, 55%);
+  box-shadow: 0px 0px 0px 0.25rem hsl(113, 74%, 55%);
+}
+
+.thumb-4 {
+  background-color: hsl(207, 74%, 55%);
+  box-shadow: 0px 0px 0px 0.25rem hsl(207, 74%, 55%);
 }
