--- a/src/styles/colors.css
+++ b/src/styles/colors.css
@@ -1,5 +1,24 @@
 /* Variables */
 :root {
+  /* slkills */
+  --background-1: hsl(0, 94%, 92%);
+  --background-2: hsl(38, 92%, 92%);
+  --background-3: hsl(142, 71%, 92%);
+  --background-4: hsl(207, 74%, 92%);
+  --thumb-1: hsl(0, 94%, 65%);
+  --thumb-2: hsl(38, 92%, 50%);
+  --thumb-3: hsl(142, 71%, 45%);
+  --thumb-4: hsl(207, 74%, 65%);
+  --hover-thumb-1: hsl(0, 94%, 80%);
+  --hover-thumb-2: hsl(38, 92%, 80%);
+  --hover-thumb-3: hsl(142, 71%, 80%);
+  --hover-thumb-4: hsl(207, 74%, 80%);
+  --selected-background: hsl(0, 0%, 100%);
+  --selected-thumb: hsl(0, 0%, 100%);
+  --selected-thumb-hover: hsl(0, 0%, 100%);
+  --position-thumb: 0%;
+  --level-label-color: hsl(0, 0%, 100%);
+
   /* new-colors - generated from colormind.io */
 
   --light-shade: #eacd85;
