--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,5 +1,4 @@
 @import url("./colors.css");
-
 @import url("./forms.css");
 @import url("./layouts.css");
 @import url("./buttons.css");
@@ -9,15 +8,16 @@
 @import url("./navigation.css");
 @import url("./card.css");
 @import url("./templates/template-default.css");
-@import url("skillRange.css");
+@import url("level.css");
 @import url("modal.css");
-/* Global styles */
 
 *,
 *::before,
 *::after {
   box-sizing: border-box;
   -webkit-font-smoothing: antialiased;
+  /* font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
+    "Helvetica Neue", sans-serif; */
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
     "Helvetica Neue", sans-serif;
 }
