--- a/src/styles/buttons.css
+++ b/src/styles/buttons.css
@@ -1,3 +1,6 @@
+:root {
+}
+
 button {
   appearance: none;
   background: none;
@@ -8,42 +11,57 @@ button {
 }
 
 .button {
+  position: relative;
+  font-size: 1rem;
+  line-height: 1rem;
+  font-weight: 600;
   display: inline-flex;
   align-items: center;
   justify-content: center;
-  color: var(--label-color);
-  font-size: 0.75rem;
-  font-weight: 700;
-  text-transform: uppercase;
-  text-align: center;
-  border: 1px solid transparent;
-  border-radius: 0.25rem;
-  cursor: pointer;
-  height: fit-content;
-  padding: 0.25rem 0.75rem;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif, Apple Color Emoji,
-    Segoe UI Emoji;
-  outline: 0;
-  position: relative;
-  text-decoration: none;
-  text-transform: uppercase;
-  user-select: none;
+  appearance: none;
+  outline: none;
   white-space: nowrap;
-  vertical-align: baseline;
+  text-align: center;
+  padding: 16px 24px;
+  border-radius: 0.25rem;
+  transition: background-color 0.1s ease 0s, color 0.1s ease 0s, box-shadow 0.1s ease 0s;
+  cursor: pointer;
+  border: 1px solid var(--shadow);
+  user-select: none;
+  pointer-events: auto;
+  background: rgba(26, 145, 240, 0);
+  background-color: rgba(26, 145, 240, 0);
+  color: rgb(30, 37, 50);
 }
 
+.button.borderless {
+  border: none;
+}
 .button:hover {
-  color: var(--primary);
+  color: var(--blue-darkest);
+  border-color: var(--blue-dark);
 }
 
-.button.delete {
-  border-color: var(--danger);
+.block {
   width: 100%;
-  transition: all 0.2s ease-in-out;
-  color: var(--danger);
 }
 
-.button.delete:hover {
-  background-color: var(--danger);
+.button.blue {
+  border-color: transparent;
+  background-color: var(--blue-darkest);
   color: var(--white);
+}
+
+.button.blue:hover {
+  background-color: var(--blue-dark);
+}
+
+.button.red {
+  border-color: transparent;
+  background-color: var(--red-dark);
+  color: var(--white);
+}
+
+.button.red:hover {
+  background-color: var(--red-darkest);
 }
