--- a/src/styles/modal.css
+++ b/src/styles/modal.css
@@ -1,27 +1,75 @@
 .modal-wrapper {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: hsla(240, 40%, 10%, 0.8);
+  z-index: 100;
   display: flex;
   justify-content: center;
   align-items: center;
-  position: fixed;
-  inset: 0px;
-  padding: 32px 40px;
-  z-index: 1200;
-  opacity: 1;
-  transition-property: opacity;
-  transition-timing-function: ease-out;
-  transition-duration: 150ms;
-  background: hsla(240, 40%, 10%, 0.8);
+}
+
+.modal-window {
+  background: var(--white);
+  border-radius: 0.25rem;
+  padding: 1rem;
+  width: clamp(250px, 100%, 540px);
+  max-height: 90vh;
   overflow-y: auto;
+}
+
+.modal-close {
+  position: absolute;
+  top: 0px;
+  right: 0px;
+  padding: 1.2rem;
+  cursor: pointer;
+}
+
+.modal {
+  position: relative;
+  width: 100%;
+  max-width: 540px;
+  background-color: rgb(255, 255, 255);
+  border-radius: 6px;
+  z-index: 999;
+  padding: 32px 40px;
+}
+
+.close-icon {
+  display: block;
+  width: 20px;
+  height: 20px;
+  fill: var(--muted);
+}
+
+.close-icon:hover {
+  fill: var(--primary);
+}
+
+.modal-close:hover {
+  color: rgb(255, 255, 255);
 }
 
 .modal-header {
   display: flex;
+  font-weight: 600;
+  font-size: 1.5rem;
   justify-content: space-between;
   align-items: center;
-  padding: 1rem;
-  border-bottom: 1px solid var(--input-background);
 }
 
 .modal-content {
-  padding: 2rem 2.5rem;
+  font-size: medium;
+  font-weight: 400;
+  padding: 1rem 2rem;
+}
+
+.modal-actions {
+  display: flex;
+  gap: 0.5rem;
+  justify-content: flex-end;
+  padding: 0.25 0.5rem;
 }
