--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -10,14 +10,13 @@
 @import url("./templates/template-default.css");
 @import url("level.css");
 @import url("modal.css");
+@import url("avatar.css");
 
 *,
 *::before,
 *::after {
   box-sizing: border-box;
   -webkit-font-smoothing: antialiased;
-  /* font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
-    "Helvetica Neue", sans-serif; */
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
     "Helvetica Neue", sans-serif;
 }
@@ -44,7 +43,7 @@ ul {
 
 .scrollable-content {
   height: clamp(100vh, 100vh, 100vh);
-  width: clamp(384px, 100vw, 1200px);
+  width: clamp(384px, 100vw, 1400px);
   margin: 0 auto;
   padding: 0 1rem;
   padding-top: 2vh;
