--- a/src/styles/navigation.css
+++ b/src/styles/navigation.css
@@ -4,9 +4,9 @@
   overflow: hidden;
   height: 100%;
   transition: cubic-bezier(0.4, 0, 0.2, 1) 1s;
-  background-color: var(--white);
+  background-color: var(--shadow);
   color: var(--black);
-  box-shadow: 0px 0px 8px 2px var(--shadow);
+  overflow: hidden;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
