--- a/src/styles/navigation.css
+++ b/src/styles/navigation.css
@@ -5,14 +5,12 @@
   height: 100%;
   transition: cubic-bezier(0.4, 0, 0.2, 1) 1s;
   background-color: var(--shadow);
-  color: var(--black);
-  overflow: hidden;
+  color: var(--secondary);
+  fill: var(--secondary);
   display: flex;
   flex-direction: row;
-  flex-wrap: wrap;
-  padding: 1.5em 1rem;
+  padding: 2.5rem 2rem;
   margin: 0;
-  height: auto;
   min-width: 384px;
   width: 100%;
   line-height: 0;
@@ -20,37 +18,34 @@
   justify-content: space-between;
 }
 
-.app-nav.shrink {
-  padding: 0rem 1rem;
+.app-title {
+  font-size: 1.9rem;
+  font-weight: 600;
+  text-transform: uppercase;
+  text-align: center;
 }
 
 .github-icon {
   transition: all cubic-bezier(0.4, 0, 0.2, 1) 1s;
   width: 40px;
   height: 40px;
-  color: var(--black);
-  fill: black;
+}
+.app-nav.shrink {
+  padding: 1.5rem 1rem;
+  background-color: white;
+  box-shadow: 0 0 3px var(--shadow);
+  color: var(--secondary);
+  fill: var(--secondary);
 }
 
 .github-icon.shrink {
   width: 24px;
   height: 24px;
   margin: 0.5rem;
-  color: var(--black);
-  fill: black;
 }
 
 .app-title.shrink {
   font-size: 1.1rem;
   font-weight: 600;
-  color: var(--black);
   text-transform: uppercase;
-}
-
-.app-title {
-  font-size: 1.9rem;
-  font-weight: 600;
-  color: var(--black);
-  text-transform: uppercase;
-  text-align: center;
 }
