--- a/src/styles/preview.css
+++ b/src/styles/preview.css
@@ -7,6 +7,7 @@
   flex: 1 1 0%;
   display: flex;
   align-items: center;
+  overflow: auto;
   justify-content: center;
   flex-flow: column nowrap;
   background-color: var(--blue-darkest);
@@ -20,11 +21,16 @@
   top: 0;
   margin: 0 auto;
   left: 0;
-  transform: scale(0.75);
+  /* width: m; */
+  /* transform: scale(0.75); */
+  /* dimensions for A4 */
+  width: 210mm;
+  height: 297mm;
+  overflow: auto;
   border-radius: 0.25rem;
   background-color: aliceblue;
-  width: clamp(24rem, 100%, 28rem);
-  height: clamp(28rem, 100%, 32rem);
+  /* width: clamp(8rem, 210mm, 210mm); */
+  /* height: clamp(14rem, 297mm, 297mm); */
 }
 
 .preview-title {
