--- a/src/styles/preview.css
+++ b/src/styles/preview.css
@@ -4,10 +4,10 @@
   bottom: 0px;
   right: 0px;
   width: 100%;
+  inset: 0px;
   flex: 1 1 0%;
   display: flex;
   align-items: center;
-  overflow: auto;
   justify-content: center;
   flex-flow: column nowrap;
   background-color: var(--blue-darkest);
@@ -17,23 +17,13 @@
 }
 
 .page {
-  position: relative;
-  top: 0;
-  margin: 0 auto;
-  left: 0;
-  /* width: m; */
-  /* origin top */
-  transform: scale(0.9);
-  width: 210mm;
-  height: 297mm;
-  /* dimensions for A4 */
-  /* width: 210mm; */
-
-  /* height: 297mm; */
+  display: block;
+  size: 7in 9.25in;
+  margin: 27mm 16mm 27mm 16mm;
+  overflow: auto;
   border-radius: 0.25rem;
-  background-color: aliceblue;
-  /* width: clamp(8rem, 210mm, 210mm); */
-  /* height: clamp(14rem, 297mm, 297mm); */
+  font-size: smaller;
+  background-color: white;
 }
 
 .preview-title {
